[gd_scene load_steps=34 format=3 uid="uid://bgxyftglopdbu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_id23e"]
[ext_resource type="Texture2D" uid="uid://1hs6xi4he407" path="res://assets/brackeys_platformer_assets/sprites/knight.png" id="1_ierxh"]
[ext_resource type="PackedScene" uid="uid://c23aopcmqdcjy" path="res://scenes/HealthBar.tscn" id="3_ldwos"]
[ext_resource type="FontFile" uid="uid://c4fobcayoskjc" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8-Bold.ttf" id="4_6b614"]
[ext_resource type="AudioStream" uid="uid://cjp88nijsd7yq" path="res://assets/Super Dialogue Audio Pack v1/Step 2 - Audio Files/7 - Damage/Female/Karen Cenon/damage_1_karen.wav" id="5_cfdkj"]
[ext_resource type="AudioStream" uid="uid://cyd78rwki6sc6" path="res://assets/Super Dialogue Audio Pack v1/Step 2 - Audio Files/8 - Death/Female/Karen Cenon/death_1_karen.wav" id="5_wj0mc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4cvxb"]
radius = 7.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mfxwg"]
atlas = ExtResource("1_ierxh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_otn45"]
atlas = ExtResource("1_ierxh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_je5q0"]
atlas = ExtResource("1_ierxh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r18kl"]
atlas = ExtResource("1_ierxh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxmwm"]
atlas = ExtResource("1_ierxh")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kqo7"]
atlas = ExtResource("1_ierxh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c8kt"]
atlas = ExtResource("1_ierxh")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gfue"]
atlas = ExtResource("1_ierxh")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq42o"]
atlas = ExtResource("1_ierxh")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivafy"]
atlas = ExtResource("1_ierxh")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0f48"]
atlas = ExtResource("1_ierxh")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vmfw"]
atlas = ExtResource("1_ierxh")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdttl"]
atlas = ExtResource("1_ierxh")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep4gm"]
atlas = ExtResource("1_ierxh")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdj5x"]
atlas = ExtResource("1_ierxh")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeo16"]
atlas = ExtResource("1_ierxh")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjugi"]
atlas = ExtResource("1_ierxh")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47cvs"]
atlas = ExtResource("1_ierxh")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80o35"]
atlas = ExtResource("1_ierxh")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhkqv"]
atlas = ExtResource("1_ierxh")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ht5"]
atlas = ExtResource("1_ierxh")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebppn"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfxwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otn45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je5q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r18kl")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxmwm")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kqo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c8kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gfue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq42o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivafy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0f48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vmfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdttl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep4gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdj5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeo16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjugi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47cvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80o35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhkqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2ht5")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_7l621"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sounds/HurtSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ux6d5"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sounds/DeathSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g04vn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sounds/DeathSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sounds/HurtSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgjlu"]
_data = {
"RESET": SubResource("Animation_g04vn"),
"death": SubResource("Animation_ux6d5"),
"hurt": SubResource("Animation_7l621")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_id23e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(2, -9)
shape = SubResource("CircleShape2D_4cvxb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -13)
sprite_frames = SubResource("SpriteFrames_ebppn")
animation = &"jump"
autoplay = "idle"

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthBar" parent="." instance=ExtResource("3_ldwos")]
position = Vector2(-18, -24)
scale = Vector2(0.5, 0.5)

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MyScore" type="Label" parent="ui"]
layout_mode = 0
offset_left = -14.0
offset_top = -40.0
offset_right = 26.0
offset_bottom = -17.0
theme_override_colors/font_color = Color(1, 1, 0.501961, 1)
theme_override_fonts/font = ExtResource("4_6b614")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 2

[node name="sounds" type="Node" parent="."]

[node name="HurtSound" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("5_cfdkj")
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("5_wj0mc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rgjlu")
}

[connection signal="hp_gain" from="." to="." method="_on_hp_gain"]
[connection signal="hp_gain" from="." to="HealthBar" method="_on_player_hp_gain"]
[connection signal="hp_lose" from="." to="." method="_on_hp_lose"]
[connection signal="hp_lose" from="." to="HealthBar" method="_on_player_hp_lose"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
